frame/support/test/tests/benchmark_ui/bad_return_path_non_benchmark_result.stderr
error: expected either BenchmarkResult<T> or Result<T, BenchmarkError>
  --> tests/benchmark_ui/bad_return_path_non_benchmark_result.rs:10:40
   |
10 |     fn bench() -> frame_benchmarking::v2::BenchmarkException<()> {
   |                                           ^^^^^^^^^^^^^^^^^^
